--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^4.4.0",
     "core-js": "^3.8.3",
     "d3": "^7.8.5",
+    "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
     "vue-chartjs": "^5.2.0",
     "vue-router": "^2.8.1",
@@ -21,6 +22,7 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
