--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^4.4.0",
     "core-js": "^3.8.3",
     "d3": "^7.8.5",
+    "firebase": "^10.6.0",
     "register-service-worker": "^1.7.2",
     "vue": "^2.7.15",
     "vue-chartjs": "^5.2.0",
