--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.4.0",
     "core-js": "^3.8.3",
     "d3": "^7.8.5",
