--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^2.2.0",
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^3.8.0",
     "core-js": "^3.8.3",
@@ -15,6 +16,7 @@
     "firebase": "^10.6.0",
     "register-service-worker": "^1.7.2",
     "vue": "^2.7.15",
+    "vue-chart-js": "^1.4.1",
     "vue-chartjs": "^4.0.0",
     "vue-router": "^2.8.1",
     "vuetify": "^2.6.0",
