--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Supersavers",
+  "name": "SNJ",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,16 +8,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@google-cloud/vision": "^4.0.2",
     "@stripe/stripe-js": "^2.2.0",
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^3.8.0",
+    "compromise": "^14.10.1",
     "core-js": "^3.8.3",
     "d3": "^7.8.5",
     "firebase": "^10.6.0",
+    "handwritten": "^1.0.7",
+    "node-hid": "^3.0.0",
+    "node-tesseract-ocr": "^2.2.1",
     "register-service-worker": "^1.7.2",
+    "tesseract-ocr": "^1.0.0",
+    "tesseract.js": "^5.0.3",
     "vue": "^2.7.15",
+    "vue-barcode-reader": "^1.0.3",
+    "vue-barcode-scanner": "^0.8.1",
     "vue-chart-js": "^1.4.1",
     "vue-chartjs": "^4.0.0",
+    "vue-head": "^2.2.0",
+    "vue-meta": "^2.4.0",
+    "vue-qrcode-reader": "^5.4.1",
     "vue-router": "^2.8.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
