--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "handwritten": "^1.0.7",
     "node-hid": "^3.0.0",
     "node-tesseract-ocr": "^2.2.1",
+    "quagga": "^0.12.1",
     "register-service-worker": "^1.7.2",
     "tesseract-ocr": "^1.0.0",
     "tesseract.js": "^5.0.3",
